fixed error message and spacing

--- a/components/Footer/Footer.module.css
+++ b/components/Footer/Footer.module.css
@@ -4,7 +4,7 @@
     left: 0;
     bottom: 0;
     width: 100%;
-    height: 40px; 
+    height: 30px; 
     padding: 10px;
     font-family: 'Helvectica', sans-serif;
     font-size: 0.8rem;
