--- a/styles/signup.module.css
+++ b/styles/signup.module.css
@@ -9,7 +9,7 @@
     align-items: center;
     padding: 0;
     min-height: 80vh;
-    margin: 0;
+    margin-bottom: 4rem;
   }
   
   .title {
@@ -57,15 +57,16 @@
   
   .form input {
     margin: 0.5rem 0;
-    padding: 0.75rem;
+    padding: 0.5rem;
     border: 1px solid #eaeaea;
     border-radius: 5px;
     font-size: 1rem;
-    width: 100%;
+    width: 90%;
   }
   
   .form button {
-    margin-top: 1rem;
+    margin-top: 0.8rem;
+    margin-bottom: 0.8rem;
     padding: 0.6rem 1.5rem;
     border: none;
     border-radius: 5px;
@@ -110,28 +111,67 @@
     margin-left: 0.5rem;
   }
   
-  @media (max-width: 600px) {
+  @media (min-width: 768px) and (max-width: 1024px) {
+    .container {
+      padding: 0 2rem;
+    }
+    
     .main {
       padding: 2rem;
     }
-  
+    
     .title {
-      font-size: 3rem;
+      font-size: 2rem;
     }
-  
+    
     .description {
-      font-size: 0.9rem;
+      font-size: 0.8rem;
+      max-width: 90%;
     }
-  
+    
     .form {
       padding: 1.5rem;
-      margin: 0.5rem;
+      max-width: 80%;
     }
     
     .form input {
       font-size: 0.9rem;
     }
+    
+    .form button {
+      padding: 0.5rem 1rem;
+      font-size: 0.9rem;
+    }
+  }
   
+  @media (max-width: 600px) {
+    .container {
+      padding: 0 1rem;
+    }
+    
+    .main {
+      padding: 1rem;
+    }
+    
+    .title {
+      font-size: 1.5rem;
+    }
+    
+    .description {
+      font-size: 0.8rem;
+      max-width: 100%;
+    }
+    
+    .form {
+      padding: 1rem;
+      margin: 0.5rem;
+      max-width: 100%;
+    }
+    
+    .form input {
+      font-size: 0.9rem;
+    }
+    
     .form button {
       padding: 0.5rem 1rem;
       font-size: 0.9rem;
